# PanUpLoad

./: .gitignore  LICENSE  README.md  main.py  panupdate.spec  pyproject.toml  requirements.txt  test_login_interactive.py
docs/superpowers/plans/: 2026-05-15-panupdate-web-login.md
panupdate/: __init__.py
panupdate/auth/: __init__.py  cdp_login.py  oauth_server.py  selenium_login.py  web_login.py  webview_login.py
panupdate/core/: backup_engine.py  file_scanner.py  upload_manager.py
panupdate/drivers/: __init__.py  baidu.py  base.py  kuaike.py
panupdate/storage/: __init__.py  crypto.py  db.py
panupdate/ui/: __init__.py  app.py  backup_page.py  login_page.py  settings_page.py
panupdate/ui/components/: drive_card.py
panupdate/utils/: logger.py  retry.py  upload_logger.py
tests/: test_backup_engine.py  test_baidu_driver.py  test_base_driver.py  test_crypto.py  test_db.py  test_file_scanner.py  test_integration.py  test_kuaike_driver.py  test_oauth_server.py  test_upload_manager.py  test_web_login.py
